# workout_backend

./: .env.example  Cargo.toml  LICENSE
.sqlx/: query-02973e1f717298aa8e6676b2edd1004a1372cc80ae117e7428d7e765aa362e40.json  query-0404a1e09cfa2a959536192d09763e07ad9599c047caa1f5217f13c5b3aafec2.json  query-0af45ec1f5459eb7bac59e4f6e42da938d8b064b093612bddf2390e706dab639.json  query-0b0830cdd21c25d5e61bb4a0b496b5135c5970121098b32f66673cb0fcc0a11c.json  query-0d0cbb3663f8da91123883b233d2c06bd9c4b546fa5ed36f6335134c3cee5cbd.json  query-1011ed44d497975ba00c6d77561af1045ff19160e86a5cee558f17d01c4ff1c9.json  query-22000b0b1adcc322750b6e0b8dc36facbf0aab4d9af56de85e0bdf08b099f6a1.json  query-24b6a829d599073f3436685c284b413156491394bcf2f62397db6c8123285ae6.json  query-3ff6228d1fd1083a8317860bffbe002664380e5aa99ea50fe160951d3eef72af.json  query-49c3b169e7d26aa25a89dc7145ed2f69a70cecee55f08457f8aa16a85befd81a.json  query-4b4d656ef0a89c7868052ca0a066605d1e0de0c3d9ebc1986d48dbdfbec6c81c.json  query-4d6972a0917a0e81cc82bd2eab8f54075d269fbcadaaa38acf4d776f4a0c96b5.json  query-52293e23341d62e66c6d181df23d048df5e9737d9b9a9a42afeea50c0517c50a.json  query-5235a06f5c4d1f7d596b9a551ab38a50303f59b45ed247e5226ac2f46df9fd7e.json  query-551e73870a5b5da340e5246bda0f3be5fe90071fb59f7710bf383b750533117f.json  query-56b466b57a64929a4c6ddfaecadcbbb9461c172bf4fa6edf8eb1ab28f41ab6d4.json  query-5aa21495e5915b7d1ad7753c7de9eb8cd6564be7f87af98a0c24d1b90ed07e5b.json  query-65e26de843efed738742b226d358fb5323c7c16a749c16b766cc033dfe0e85bc.json  (+28 more)
migrations/: 0005_create_exercise_workout_table.sql  (+7 more)
(+29 files in other folders)
