[package]
name = "workout_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.79"
axum = { version = "0.7.4", features = ["json"] }
futures = "0.3.30"
mongodb = "2.8.2"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
