[package]
name = "workout_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.79"
axum = { version = "0.7.4", features = ["json"] }
chrono = { version = "0.4.35", features = ["serde"] }
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.8.0", features = ["v4"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
